# edinet_downloader

./: .gitignore  claude.md  edinet_metadata.py  financial_data_extractor.py  get_financial_data.py  pyproject.toml  sow.md  xbrl_fin_metadata.py  xbrl入門.md
edinet_client/: __init__.py  config.py
edinet_client/api/: client.py
